@@ -23,7 +23,6 @@ import org.apache.tinkerpop.gremlin.AbstractGraphProvider;
 import org.apache.tinkerpop.gremlin.LoadGraphWith;
 import org.apache.tinkerpop.gremlin.driver.Client;
 import org.apache.tinkerpop.gremlin.driver.Cluster;
-import org.apache.tinkerpop.gremlin.driver.ser.Serializers;
 import org.apache.tinkerpop.gremlin.process.remote.RemoteGraph;
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversalSource;
 import org.apache.tinkerpop.gremlin.server.GremlinServer;
@@ -51,7 +50,6 @@ public class RemoteGraphProvider extends AbstractGraphProvider implements AutoCl
     private static GremlinServer server;
     private final Map<String, RemoteGraph> remoteCache = new HashMap<>();
     private final Cluster cluster = TestClientFactory.open();
-    //private final Cluster cluster = Cluster.build().maxContentLength(1024000).serializer(Serializers.GRAPHSON_V2D0).create();
     private final Client client = cluster.connect();
 
     public RemoteGraphProvider() {
@@ -96,7 +94,7 @@ public class RemoteGraphProvider extends AbstractGraphProvider implements AutoCl
 
     @Override
     public void clear(final Graph graph, final Configuration configuration) throws Exception {
-        // doesn't bother to clear grateful because i don't believe that ever gets mutated - read-only
+        // doesn't bother to clear grateful/sink because i don't believe that ever gets mutated - read-only
         client.submit("classic.clear();modern.clear();crew.clear();graph.clear();" +
                 "TinkerFactory.generateClassic(classic);" +
                 "TinkerFactory.generateModern(modern);" +
@@ -158,6 +156,9 @@ public class RemoteGraphProvider extends AbstractGraphProvider implements AutoCl
                 break;
             case CREW:
                 serverGraphName = "crew";
+                break;
+            case SINK:
+                serverGraphName = "sink";
                 break;
             default:
                 serverGraphName = "graph";
